# nb-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
pre_commit_hooks/: add_canary.py  add_colophon.py  add_task_numbers.py  add_usage_guidelines.py  check_filename.py  check_pip_installs.py  fix_encoding.py  fix_filename.py  fix_smartquotes.py  fix_title_headers.py  lint_sql_cells.py  remove_blank_cells.py  remove_blank_last.py  remove_last_blanks.py  sort_spelling_dict.py  utils.py
tests/: conftest.py  test_add_colophon.py  test_add_task_numbers.py  test_fix_title_headers.py  test_lint_sql_cells.py  test_remove_blank_cells.py  test_remove_last_blanks.py
