[metadata]
name = nb_hooks
version = 0.1.0
description = Pre-commit hooks for notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicholas Cifuentes-Goodbody
author_email = nicholas.cifuentes-goodbody@wqu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    nbformat
    sqlparse
    thefuzz
    pytest
    python-Levenshtein
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    remove-blank-cells = pre_commit_hooks.remove_blank_cells:main
    lint-sql-cells = pre_commit_hooks.lint_sql_cells:main
    add-colophon = pre_commit_hooks.add_colophon:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
